# actix_send

./: Cargo.toml  README.md
actix-send-macros/: Cargo.toml  README.md
actix-send-macros/src/: lib.rs  message.rs
actix_send_websocket/: CHANGES.md  Cargo.toml  README.md
actix_send_websocket/examples/websocket-chat2/: Cargo.toml
actix_send_websocket/examples/websocket-chat2/src/: main.rs  server.rs
actix_send_websocket/src/: lib.rs
actix_send_websocket/tests/: websockets.rs
examples/: actix-local.rs  actix-runtime-mpsc.rs  actix.rs  actor_lifecycle_hook.rs  basic.rs  benchmark.rs  blocking.rs  broadcast.rs  concurrency.rs  delayed_message.rs  dynamic_dispatch.rs  handler_v2.rs  multi_msgs.rs  no_macro.rs  stream.rs  subscribe.rs  type_alias.rs
examples/websocket-chat/: Cargo.toml
examples/websocket-chat/src/: main.rs  server.rs
examples/websocket-chat2/: Cargo.toml  README.md
examples/websocket-chat2/src/: main.rs  server.rs
src/: actor.rs  actors.rs  address.rs  builder.rs  context.rs  error.rs  interval.rs  lib.rs  object.rs  receiver.rs  sender.rs  stream.rs  subscribe.rs
src/util/: channel.rs  constant.rs  future_handle.rs  lock.rs  mod.rs  runtime.rs  smart_pointer.rs
tests/: actor.rs
