[package]
name = "actix_send"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
exclude = ["examples/*"]
readme = "README.md"

[lib]
name = "actix_send"
path = "src/lib.rs"

[workspace]
members = ["actix-send-macros"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "blocking"
path = "examples/blocking.rs"

[[example]]
name = "concurrency"
path = "examples/concurrency.rs"

[[example]]
name = "delayed_message"
path = "examples/delayed_message.rs"

[[example]]
name = "dynamic_dispatch"
path = "examples/dynamic_dispatch.rs"

[[example]]
name = "no_macro"
path = "examples/no_macro.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "type_alias"
path = "examples/type_alias.rs"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio/rt-multi-thread","tokio/sync", "tokio/time", "async-channel"]
async-std-runtime = ["async-std", "smol", "tokio/sync", "async-channel"]
actix-runtime = ["actix-rt", "tokio/sync", "async-channel"]
actix-runtime-mpsc = ["actix-rt", "tokio/sync"]
actix-runtime-local = ["actix-rt", "actix-utils"]

[dependencies]
actix_send_macros = { git = "https://github.com/fakeshadow/actix_send.git" }
async-trait = "0.1.40"
futures-util = { version = "0.3.6", default-features = false }
pin-project = "1.0.1"

actix-rt = { version = "1.1.1", optional = true }
actix-utils = { version = "2.0.0", optional = true }
async-channel = { version = "1.5.1", optional = true }
async-std = { version = "1.6.4", optional = true, default-features = false }
smol = { version = "0.3.3", optional = true, default-features = false }
tokio = { version = "0.3", optional = true }

[dev-dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
async-std = { version = "1.6.4", features = ["attributes", "unstable"] }
tokio = { version = "0.3", features = ["full"] }
num_cpus = "1.13.0"