[package]
name = "actix_send"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
exclude = ["examples/*"]
readme = "README.md"

[lib]
name = "actix_send"
path = "src/lib.rs"

[workspace]
members = ["actix-send-macros"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "blocking"
path = "examples/blocking.rs"

[[example]]
name = "concurrency"
path = "examples/concurrency.rs"

[[example]]
name = "delayed_message"
path = "examples/delayed_message.rs"

[[example]]
name = "dynamic_dispatch"
path = "examples/dynamic_dispatch.rs"

[[example]]
name = "no_macro"
path = "examples/no_macro.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "type_alias"
path = "examples/type_alias.rs"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio/rt-multi-thread", "tokio/sync", "tokio/time", "async-channel"]
async-std-runtime = ["async-std", "smol", "tokio/sync", "async-channel"]
actix-runtime = ["actix-rt", "tokio/sync", "async-channel"]
actix-runtime-mpsc = ["actix-rt", "tokio/sync"]

[dependencies]
actix_send_macros = { path = "./actix-send-macros" }
async-trait = "0.1.40"
futures-util = { version = "0.3.5", default-features = false, features = ["alloc"] }
pin-project = "1"

actix-rt = { version = "2.1", optional = true }
async-channel = { version = "1.4.2", optional = true }
async-std = { version = "1.6.4", optional = true, default-features = false }
smol = { version = "1.2.5", optional = true, default-features = false }
tokio = { version = "1.2", optional = true, default-features = false }

[dev-dependencies]
actix = "0.11.0-beta.1"
actix-rt = "2.1"
async-std = { version = "1.8", features = ["attributes", "unstable"] }
tokio = { version = "1.2", features = ["full"] }
num_cpus = "1.13.0"

[patch.crates-io]
actix_send_macros = { path = "./actix-send-macros" }