[package]
name = "actix_send_websocket"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[features]
default = ["send"]
send = ["futures-channel"]
no-send = []

[dependencies]
actix-codec = "0.3.0"
actix-http = "2.0.0"
actix-utils = "2.0.0"
actix-web = { version = "3.0.0", default-features = false }
futures-channel = { version = "0.3.5", default-features = false, optional = true }
futures-util = { version = "0.3.5", default-features = false }
pin-project = "0.4.23"

[dev-dependencies]
actix-rt = "1.1.1"