[package]
name = "actix_send_websocket"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
keywords = ["actix-web", "websocket"]
license = "MIT"
description = "helper crate for managing websocket on actix-web framework"
edition = "2018"
exclude = ["examples/*", "tests/*"]
readme = "README.md"
repository = "https://github.com/fakeshadow/actix_send.git"

[features]
default = ["send"]
send = ["tokio/sync"]
no-send = []

[workspace]
members = ["examples/websocket-chat2"]

[dependencies]
actix-codec = "0.3.0"
actix-http = "2.0.0"
actix-utils = "2.0.0"
actix-web = { version = "3.1.0", default-features = false }
futures-util = { version = "0.3.5", default-features = false }
pin-project-lite = "0.1.7"
tokio = { version = "0.2.22", default-features = false, optional = true }

[dev-dependencies]
actix-rt = "1.1.1"