[package]
name = "actix_send_websocket"
version = "0.2.0"
authors = ["fakeshadow <24548779@qq.com>"]
description = "helper crate for managing websocket on actix-web framework"
edition = "2018"
exclude = ["examples/*", "tests/*"]
readme = "README.md"
repository = "https://github.com/fakeshadow/actix_send.git"


[workspace]
members = ["examples/websocket-chat2"]

[dependencies]
actix-codec = "0.4.0-beta.1"
actix-http = "3.0.0-beta.3"
actix-web = { version = "4.0.0-beta.3", default-features = false }
bytestring = "1.0.0"
futures-core = { version = "0.3.7", default-features = false }
futures-util = { version = "0.3.7", default-features = false }
pin-project-lite = "0.2"
tokio = { version = "1.2", features = ["sync"] }

[dev-dependencies]
actix-rt = "2.1"

[patch.crates-io]
actix_send_websocket = { path = "./" }