[package]
name = "websocket-example"
version = "2.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.0.0-beta.3"
actix-files = "0.3.0-beta.1"
actix_send = { path = "../../", default-features = false, features = ["actix-runtime-local"] }
actix_send_websocket = { path = "../../actix_send_websocket" }

rand = "0.7"
bytes = "0.5.3"
byteorder = "1.1"
futures = "0.3.1"
env_logger = "0.7"
parking_lot = ""
serde = "1.0"
serde_json = "1.0"
