[package]
name = "websocket-chat2"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[[bin]]
name = "websocket-chat2"
path = "src/main.rs"

[dependencies]
actix-web = "3.0.2"
actix-files = "0.3.0"
actix_send_websocket = { git = "https://github.com/fakeshadow/actix_send.git" }
rand = "0.7.3"
