[package]
name = "websocket-chat2"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[[bin]]
name = "websocket-chat2"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.0-beta.2"
actix_send_websocket = "0.2.0"
actix-web = { version = "4.0.0-beta.3", default-features = false }
bytestring = "1"
rand = "0.8"
